--- a/resources/css/admin/app.scss
+++ b/resources/css/admin/app.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import "nucleo-icons";
 @import "nucleo-svg";
 @import "perfect-scrollbar";
