--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -55,3 +55,7 @@
 
 @import "pages/product";
 @import "pages/cart";
+
+.filter-color[type='radio']:checked + label {
+    box-shadow: 0 0 5px 5px #000000ba;
+}
